# broken-deprecated-desktop-integration

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh
lib/: CMakeLists.txt
resources/: CMakeLists.txt
src/: CMakeLists.txt  dialog.cpp
